Fix handling of staticfail crossing try-with boundaries; fix trap_analysis in presence of duplicated handlers in different try-with contexts

--- a/testsuite/tests/asmgen/Makefile
+++ b/testsuite/tests/asmgen/Makefile
@@ -74,6 +74,7 @@ ARGS_even-odd=-DINT_INT -DFUN=is_even main.c
 ARGS_even-odd-spill=-DINT_INT -DFUN=is_even main.c
 ARGS_pgcd=-DINT_INT -DFUN=pgcd_30030 main.c
 ARGS_double-exit=-DINT_INT -DFUN=double_exit main.c
+ARGS_deep-exit=-DINT_INT -DFUN=deep_exit main.c
 
 skips:
 	@for c in $(CASES); do \
