--- a/testsuite/tests/lib-dynlink-native/Makefile
+++ b/testsuite/tests/lib-dynlink-native/Makefile
@@ -35,7 +35,7 @@ all: compile run
 PLUGINS=plugin.so plugin2.so sub/plugin.so sub/plugin3.so plugin4.so \
         mypack.so packed1.so packed1_client.so pack_client.so plugin_ref.so \
         plugin_high_arity.so plugin_ext.so plugin_simple.so bug.so \
-        plugin_thread.so plugin4_unix.so a.so b.so c.so
+        plugin_thread.so plugin4_unix.so a.so b.so c.so plugin_exn.so
 
 ADD_COMPFLAGS=-thread
 
@@ -45,7 +45,7 @@ compile: $(PLUGINS) main$(EXE) mylib.so
 .PHONY: run
 run:
 	@printf " ... testing 'main'"
-	@./main$(EXE) plugin.so plugin2.so plugin_thread.so > result
+	@./main$(EXE) plugin.so plugin2.so plugin_thread.so plugin_exn.so > result
 	@$(DIFF) reference result >/dev/null \
 	&& echo " => passed" || echo " => failed"
 
